feat: Session management
